overflow fix

--- a/public/style.css
+++ b/public/style.css
@@ -7,6 +7,7 @@
 .page {
     background-color: #FBF5E5;
     font: 20px Helvetica, Arial;
+    overflow-x: hidden;
 }
 .page.login {
     background-color: #E6B5B3;
